# parallel-dataflow

./: .gitignore  Cargo.toml  Makefile  README.md  ackermann-inlined.bril  bitshift-inlined.bril  bitshift-pow.bril  bitwise-ops-inlined.bril  bitwise-ops-loop.bril  debug.txt  graphs.py  result.txt  turnt.toml
blog/: blog.md
impls/: Cargo.toml
impls/src/: lib.rs  macros.rs  main.rs  mixed.rs  parallel.rs  passes.rs  sequential.rs
inliner/: Cargo.toml
inliner/src/: inliner.rs  lib.rs  main.rs
parallel/: Cargo.toml
parallel/src/: main.rs  mutex_worklist.rs
passes/: Cargo.toml
passes/src/: available_expr.rs  const_prop.rs  lib.rs  live_vars.rs  reaching_defs.rs
rand/: rand1.bril  rand10.bril  rand11.bril  rand12.bril  rand13.bril  rand14.bril  rand15.bril  rand16.bril  rand17.bril  rand18.bril  rand19.bril  rand20.bril  rand21.bril  rand22.bril  rand23.bril  rand24.bril  rand25.bril  rand26.bril  rand27.bril  rand28.bril  rand29.bril  rand3.bril  rand30.bril  rand31.bril  rand32.bril  rand33.bril  rand34.bril  rand35.bril  rand36.bril  rand37.bril  rand38.bril  rand39.bril  rand4.bril  rand40.bril  rand41.bril  rand42.bril  rand43.bril  rand44.bril  rand45.bril  rand46.bril  (+6 more)
rand_multi_func/: rand0.bril  rand1.bril  rand2.bril  rand3.bril  rand4.bril
rand_small/: rand0.bril  rand2.bril  rand5.bril  rand8.bril  rand9.bril
sequential/: Cargo.toml
sequential/src/: executor.rs  lib.rs  main.rs  parallel.rs
test/: recursive.bril  silly.bril
utils/: Cargo.toml
utils/src/: dataflow_executor.rs  dataflow_spec.rs  lib.rs
