[workspace]
members = [ "sequential", "parallel" , "inliner"]
resolver = "2"

[workspace.dependencies]
lesson2 = { git = "https://github.com/gabizon103/cs6120.git" }
lesson4 = { git = "https://github.com/gabizon103/cs6120.git" }
utils = { git = "https://github.com/gabizon103/cs6120" }
argh = "0.1.13"
bril-rs = { git = "https://github.com/sampsyo/bril", features = [
    "memory",
    "float",
    "ssa",
    "speculate",
    "position",
    "import",
    "char",
] }
serde_json = "1.0.138"
