[workspace]
members = ["impls", "utils", "passes"]
resolver = "2"

[workspace.dependencies]
bril-utils = { git = "https://github.com/UnsignedByte/6120", package = "utils" }
argh = "0.1.13"
itertools = "0.14.0"
utils = { version = "0.1.0", path = "utils" }
passes = { version = "0.1.0", path = "passes" }
simple_logger = "5.0.0"
log = "0.4"
