[workspace]
members = ["impls", "utils", "passes"]
resolver = "2"

[workspace.dependencies]
bril-utils = { git = "https://github.com/UnsignedByte/6120", package = "utils", rev = "77916a04a620010b487b10550fb6340a519ba87c" }
bril2json = { git = "https://github.com/sampsyo/bril", version = "0.1.0" }
argh = "0.1.13"
itertools = "0.14.0"
utils = { version = "0.1.0", path = "utils" }
passes = { version = "0.1.0", path = "passes" }
simple_logger = "5.0.0"
log = "0.4"
rayon = "1.10.0"
strum = { version = "0.27.1", features = ["derive"] }
csv = "1.3.1"
serde = "1.0.219"
regex = "1.11.1"
